--- a/themes/basic/static/css/styles/bootstrap-styles.css
+++ b/themes/basic/static/css/styles/bootstrap-styles.css
@@ -22,6 +22,8 @@
     margin-right: -10px;
 }
 
-.col-md-4 {
-    padding: 25px;
+.col-md-3 {
+    /* padding: 25px; */
+    padding-right: 0;
+    padding-left: 0;
 }
